--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ html,body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+@media (max-width: 400px)  {
+    .pTextBg{
+        font-size: 12px;
+    }
+}
